--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge One Oracle</title>
-    <link rel="stylesheet" href="../challenge/style.css" />
+    <link rel="stylesheet" href="/challenge/style/style.css" />
     <script>
       function codifica() {
         var input = document.getElementById("codigo");
@@ -34,7 +34,7 @@
   </head>
   <body>
 
-    <img  class="logoalura" src="../challenge/alura.svg">
+    <img  class="logoalura" src="../challenge-one-alura/challenge/image/alura.svg">
 
     <main class="corpo">
       <h1>Codificador de Texto</h1>
@@ -45,9 +45,9 @@
     </div>
     </main>
     <footer> 
-      <a href=""><img src="../challenge/linkedin.png"></a>
-      <a href=""><img src="../challenge/twitter.png"></a>
-      <a href=""><img src="../challenge/github.png"></a>
+      <a href="https://www.linkedin.com/in/glaucecassiano/"><img src="../challenge-one-alura/challenge/image/linkedin.png"></a>
+      <a href="https://twitter.com/glaudocss"><img src="../challenge-one-alura/challenge/image/twitter.png"></a>
+      <a href="https://github.com/glaucecassiano"><img src="../challenge-one-alura/challenge/image/github.png"></a>
 
     </footer>
   </body>
