--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge One Oracle</title>
-    <link rel="stylesheet" href="/challenge/style/style.css" />
+    <link rel="stylesheet" href="../challenge-one-alura/challenge/style/style.css" />
     <script>
       function codifica() {
         var input = document.getElementById("codigo");
