--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main class="corpo">
       <h1>Codificador de Texto</h1>
-      <textarea type="text" id="codigo" label="Inserir Texto">Digite aqui seu texto</textarea>
+      <textarea type="text" id="codigo" label="Inserir Texto" placeholder="Insira Texto"></textarea>
       <div class="botoes">
       <button onclick="codifica()">Codificar</button>
       <button onclick="decodifica()">Decodificar</button>
